--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <label>Your name:</label>
   <input type="text" name="yourName" value=""><br>
   <label>Your email:</label>
-  <input type="emial" name="yourEmail" value=""><br>
+  <input type="email" name="yourEmail" value=""><br>
   <label>Your message:</label><br>
   <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
   <input type="submit" name=""> <br>
